--- a/index.html
+++ b/index.html
@@ -582,12 +582,12 @@
 		</article>
 	</section>
 </body>
-
 </html>
 <script type="text/javascript" src="layui-2.0/layui.js"></script>
 <script type="text/javascript" src="layui-2.0/jquery3.4.1.js"></script>
 <script type="text/javascript" src="layui-2.0/public.js"></script>
 <script type="text/javascript">
+console.log(123)
 	// iframe当前标识
 	var dataId = '';
 	var dataResult = {};
