--- a/index.html
+++ b/index.html
@@ -587,6 +587,7 @@
 <script type="text/javascript" src="layui-2.0/jquery3.4.1.js"></script>
 <script type="text/javascript" src="layui-2.0/public.js"></script>
 <script type="text/javascript">
+console.log(123)
 	// iframe当前标识
 	var dataId = '';
 	var dataResult = {};
