--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
 		<a href="#table">数据表格</a>
 		<a href="#popup">弹窗</a>
 		<a href="#date">日期选择</a>
+		<a href="#badge">徽章</a>
 	</menu>
-	<header id="header">前端开发规范手册</header>
+	<header id="header">火把知识后台-基于layui框架-前端开发规范手册</header>
 	<section>
 		<article id="frame">
 			<p class="title">
@@ -367,7 +368,6 @@
 			</form>
 		</article>
 		<article id="rule">
-
 			<p class="title">
 				<svg class="icon" aria-hidden="true">
 					<use xlink:href="#iconguanlian"></use>
@@ -532,7 +532,8 @@
 				</tbody>
 				<tfoot>
 					<tr>
-						<td colspan="2"><span class="main-color">备注：</span>备注文案备注备注文案备注备注文案备注备注文案备注备注文案备注备注文案备注备注文案备注备注文案备注备注文案备注备注文案备注备注文
+						<td colspan="2"><span
+								class="main-color">备注：</span>备注文案备注备注文案备注备注文案备注备注文案备注备注文案备注备注文案备注备注文案备注备注文案备注备注文案备注备注文案备注备注文
 						</td>
 						<td align="right"><button type="button" class="layui-btn">按钮</button></td>
 					</tr>
@@ -572,16 +573,23 @@
 				<svg class="icon" aria-hidden="true">
 					<use xlink:href="#iconguanlian"></use>
 				</svg>日期选择</p>
-
 			<div class="layui-inline">
 				<input type="text" class="layui-input test1" placeholder="请选择日期">
 			</div>
-			<!-- 弹窗 -->
+		</article>
+		<article id="badge">
+			<p class="title">
+				<svg class="icon" aria-hidden="true">
+					<use xlink:href="#iconguanlian"></use>
+				</svg>徽章</p>
 			<div>
+				<span class="layui-badge-dot"></span>
+				<span class="layui-badge-rim">徽章</span>
 			</div>
 		</article>
 	</section>
 </body>
+
 </html>
 <script type="text/javascript" src="layui-2.0/layui.js"></script>
 <script type="text/javascript" src="layui-2.0/jquery3.4.1.js"></script>
