--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 				</svg>表单布局</p>
 			<p class="subTitle">表单布局1 - 预留提示空间</p>
 			<form class="layui-form" action="">
-				<p class="form-title">标题</p>
+				<p class="form-title">标题1</p>
 				<div class="layui-form-item input-layout-one">
 					<label class="layui-form-label">单行输入框：</label>
 					<div class="layui-input-inline context">
@@ -444,7 +444,7 @@
 					</div>
 				</div>
 			</form>
-			<p class="subTitle">标题</p>
+			<p class="subTitle">标题2</p>
 			<form class="layui-form" action="">
 				<div class="layui-form-item">
 					<div class="layui-inline">
@@ -496,6 +496,21 @@
 							<p class="desc"></p>
 							<p class="msg"></p>
 						</div>
+					</div>
+				</div>
+			</form>
+			<p class="subTitle">标题3</p>
+			<form class="layui-form" action="">
+				<div class="layui-form-item">
+					<label class="layui-form-label">文本：</label>
+					<div class="layui-input-block">
+						<div class="text">文本</div>
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">文本：</label>
+					<div class="layui-input-block">
+						<div class="text">文本</div>
 					</div>
 				</div>
 			</form>
