--- a/iframe-2.0/lable.html
+++ b/iframe-2.0/lable.html
@@ -41,6 +41,7 @@
 </body>
 
 </html>
+<script type="text/javascript" src="../layui-2.0/layui.js"></script>
 <script type="text/javascript" src="../layui-2.0/jquery3.4.1.js"></script>
 <script type="text/javascript" src="../layui-2.0/template/inputTags/inputTags.js"></script>
 <script type="text/javascript">
