--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
 	<!-- 字体图标 -->
 	<script src="layui-2.0/font/iconfont.js"></script>
 	<style type="text/css">
+	html {
+		background-color: #fff;
+	}
 		menu#anchor {
 			position: fixed;
-			height: 100%;
 			width: 100px;
 			text-align: center;
 			left: 0;
 			top: 0;
+			bottom: 0;
 			overflow: auto;
 			background-color: #fff;
 			z-index: 1002;
 			padding: 10px;
 			box-sizing: border-box;
 			font-size: 15px;
+			box-shadow: 0 0 5px rgba(0,0,0,.5);
 		}
 
 		#anchor a {
@@ -65,6 +69,7 @@
 			box-sizing: border-box;
 			background-color: #fff;
 			z-index: 1001;
+			box-shadow: 0 0 5px rgba(0,0,0,.5);
 		}
 	</style>
 </head>
@@ -353,7 +358,10 @@
 					</select>
 				</form>
 			</div>
-			<p class="title">多级联下拉框</p>
+			<p class="title">
+				<svg class="icon" aria-hidden="true">
+					<use xlink:href="#iconguanlian"></use>
+				</svg>多级联下拉框</p>
 			<div>
 				<cascader id="demo2"></cascader>
 			</div>
